testsuite/poke.pkl/diva-offset-diag-1.pk
/* { dg-do compile } */

var foo = 10#B;

foo /= 2#B; /* { dg-error "" } */
